--- a/src/global.scss
+++ b/src/global.scss
@@ -43,7 +43,6 @@ h5 {
 
 body {
   margin: 0;
-  min-width: 320px;
   min-height: 100vh;
   position: relative;
 }
